--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="impossible_game">Impossible Game</string>
     <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="ad_attribution">Ad</string>
 </resources>
