添加google admob RewardedVideo(奖励视频)广告  添加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="impossible_game">Impossible Game</string>
     <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="ad_attribution">Ad</string>
+
+    <string name="retry_button_text">Retry</string>
+    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
+    <string name="default_coin_text">Coins: 0</string>
+
 </resources>
