创建  新的广告ID  添加到配置文件中 测试

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="settings">设置</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad_unit_id1">ca-app-pub-9145758407938760/5396146193</string>
+    <string name="banner_ad_unit_id2">ca-app-pub-6564422200233347/9589103314</string>
     <string name="impossible_game">Impossible Game</string>
     <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="ad_attribution">Ad</string>
