--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,21 @@
     <string name="secondary2_body">Second Notification for Secondary Channel</string>
 
 
+    <integer-array name="test_arr">
+        <item>@drawable/beauty1</item>
+        <item>@drawable/beauty2</item>
+        <item>@drawable/beauty3</item>
+        <item>@drawable/beauty4</item>
+        <item>@drawable/beauty5</item>
+        <item>@drawable/beauty6</item>
+        <item>@drawable/beauty7</item>
+        <item>@drawable/beauty8</item>
+        <item>@drawable/beauty9</item>
+        <item>@drawable/beauty10</item>
+        <item>@drawable/beauty11</item>
+        <item>@drawable/beauty12</item>
+        <item>@drawable/beauty13</item>
+    </integer-array>
+
+
 </resources>
